# slime-simulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/: cell.hpp  const.hpp  particle.hpp  sensor.hpp  trail.hpp
src/: cell.cpp  main.cpp  particle.cpp  sensor.cpp  trail.cpp
